Fixed an iframe height issue on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body {
 	display: block; /* This prevents a few pixels of whitespace from appearing below the iframe. */
 	border: 0px;
 	width: 100%;
-	height: 100%;
+	min-height: 100%; /* We use min-height because height doesn't work on iOS 8 */
 }
 
 body.modal-open #oddcast-sidebar,
